out.txt
WARNING: /home/gregory/dev/NF04_v2/parser.py:110: Possible grammar rule '_p_var_declaration_line_type_error' defined without p_ prefix
WARNING: Token 'LIT_NUM' defined, but not used
WARNING: Token 'L_ARROW' defined, but not used
WARNING: /home/gregory/dev/NF04_v2/parser.py:264: Rule 'lit_float' defined, but not used
WARNING: There are 2 unused tokens
WARNING: There is 1 unused rule
WARNING: Symbol 'lit_float' is unreachable
Generating LALR tables
PLY: PARSE DEBUG START

State  : 0
Stack  : . LexToken(ALGO,'algo',1,0)
Action : Shift and goto state 4

State  : 4
Stack  : ALGO . LexToken(ID,'test',1,5)
Action : Shift and goto state 14

State  : 14
Stack  : ALGO ID . LexToken(NEWLINE,'\n',1,9)
Action : Shift and goto state 33

State  : 33
Stack  : ALGO ID NEWLINE . LexToken(VARIABLES,'variables',2,10)
Action : Reduce rule [newline -> NEWLINE] with ['\n'] and goto state 32
Result : <str @ 0x7fd98d363ef0> ('\n')

State  : 32
Stack  : ALGO ID newline . LexToken(VARIABLES,'variables',2,10)
Action : Reduce rule [algo_header -> ALGO ID newline] with ['algo','test','\n'] and goto state 3
Result : <str @ 0x7fd98d0707f0> ('test')

State  : 3
Stack  : algo_header . LexToken(VARIABLES,'variables',2,10)
Action : Shift and goto state 13

State  : 13
Stack  : algo_header VARIABLES . LexToken(:,':',2,19)
Action : Shift and goto state 30

State  : 30
Stack  : algo_header VARIABLES : . LexToken(NEWLINE,'\n',2,20)
Action : Reduce rule [colon -> :] with [':'] and goto state 29
Result : <NoneType @ 0x7fd98dd09e40> (None)

State  : 29
Stack  : algo_header VARIABLES colon . LexToken(NEWLINE,'\n',2,20)
Action : Shift and goto state 33

State  : 33
Stack  : algo_header VARIABLES colon NEWLINE . LexToken(ID,'a',3,25)
Action : Reduce rule [newline -> NEWLINE] with ['\n'] and goto state 49
Result : <str @ 0x7fd98d363ef0> ('\n')

State  : 49
Stack  : algo_header VARIABLES colon newline . LexToken(ID,'a',3,25)
Action : Reduce rule [colon_newline -> colon newline] with [None,'\n'] and goto state 28
Result : <NoneType @ 0x7fd98dd09e40> (None)

State  : 28
Stack  : algo_header VARIABLES colon_newline . LexToken(ID,'a',3,25)
Action : Reduce rule [variables_header -> VARIABLES colon_newline] with ['variables',None] and goto state 11
Result : <NoneType @ 0x7fd98dd09e40> (None)

State  : 11
Stack  : algo_header variables_header . LexToken(ID,'a',3,25)
Action : Shift and goto state 26

State  : 26
Stack  : algo_header variables_header ID . LexToken(:,':',3,26)
Action : Reduce rule [empty -> <empty>] with [] and goto state 48
Result : <NoneType @ 0x7fd98dd09e40> (None)

State  : 48
Stack  : algo_header variables_header ID empty . LexToken(:,':',3,26)
Action : Reduce rule [opt_coma -> empty] with [None] and goto state 46
Result : <str @ 0x7fd98cfdd670> ('opt_coma')

State  : 46
Stack  : algo_header variables_header ID opt_coma . LexToken(:,':',3,26)
Action : Reduce rule [id_list -> ID opt_coma] with ['a','opt_coma'] and goto state 25
Result : <list @ 0x7fd98d03e400> (['a'])

State  : 25
Stack  : algo_header variables_header id_list . LexToken(:,':',3,26)
Action : Shift and goto state 30

State  : 30
Stack  : algo_header variables_header id_list : . LexToken(TAB,'tab',3,28)
Action : Reduce rule [colon -> :] with [':'] and goto state 44
Result : <NoneType @ 0x7fd98dd09e40> (None)

State  : 44
Stack  : algo_header variables_header id_list colon . LexToken(TAB,'tab',3,28)
Action : Shift and goto state 69

State  : 69
Defaulted state 69: Reduce using 40
Stack  : algo_header variables_header id_list colon TAB . None
Action : Reduce rule [tab -> TAB] with ['tab'] and goto state 65
Result : <NoneType @ 0x7fd98dd09e40> (None)

State  : 65
Stack  : algo_header variables_header id_list colon tab . LexToken([,'[',3,31)
Action : Shift and goto state 79

State  : 79
Stack  : algo_header variables_header id_list colon tab [ . LexToken(LIT_INT,1,3,32)
Action : Shift and goto state 81

State  : 81
Stack  : algo_header variables_header id_list colon tab [ LIT_INT . LexToken(POINTS,'...',3,33)
Action : Reduce rule [lit_int -> LIT_INT] with [1] and goto state 80
Result : <LitInt @ 0x7fd98cfe70d0> (LitInt(value=1))

State  : 80
Stack  : algo_header variables_header id_list colon tab [ lit_int . LexToken(POINTS,'...',3,33)
Action : Shift and goto state 82

State  : 82
Stack  : algo_header variables_header id_list colon tab [ lit_int POINTS . LexToken(LIT_INT,3,3,36)
Action : Shift and goto state 81

State  : 81
Stack  : algo_header variables_header id_list colon tab [ lit_int POINTS LIT_INT . LexToken(],']',3,37)
Action : Reduce rule [lit_int -> LIT_INT] with [3] and goto state 83
Result : <LitInt @ 0x7fd98cfe72b0> (LitInt(value=3))

State  : 83
Stack  : algo_header variables_header id_list colon tab [ lit_int POINTS lit_int . LexToken(],']',3,37)
Action : Shift and goto state 84

State  : 84
Stack  : algo_header variables_header id_list colon tab [ lit_int POINTS lit_int ] . LexToken(NEWLINE,'\n',3,39)
ERROR: Error  : algo_header variables_header id_list colon tab [ lit_int POINTS lit_int ] . LexToken(NEWLINE,'\n',3,39)

State  : 84
Stack  : algo_header variables_header id_list colon tab [ lit_int POINTS lit_int ] . error
ERROR: Error  : algo_header variables_header id_list colon tab [ lit_int POINTS lit_int ] . error

State  : 83
Stack  : algo_header variables_header id_list colon tab [ lit_int POINTS lit_int . error
ERROR: Error  : algo_header variables_header id_list colon tab [ lit_int POINTS lit_int . error

State  : 82
Stack  : algo_header variables_header id_list colon tab [ lit_int POINTS . error
ERROR: Error  : algo_header variables_header id_list colon tab [ lit_int POINTS . error

State  : 80
Stack  : algo_header variables_header id_list colon tab [ lit_int . error
ERROR: Error  : algo_header variables_header id_list colon tab [ lit_int . error

State  : 79
Stack  : algo_header variables_header id_list colon tab [ . error
ERROR: Error  : algo_header variables_header id_list colon tab [ . error

State  : 65
Stack  : algo_header variables_header id_list colon tab . error
ERROR: Error  : algo_header variables_header id_list colon tab . error

State  : 44
Stack  : algo_header variables_header id_list colon . error
ERROR: Error  : algo_header variables_header id_list colon . error

State  : 25
Stack  : algo_header variables_header id_list . error
Action : Shift and goto state 31

State  : 31
Stack  : algo_header variables_header id_list error . LexToken(NEWLINE,'\n',3,39)
ERROR: Error  : algo_header variables_header id_list error . LexToken(NEWLINE,'\n',3,39)

State  : 31
Stack  : algo_header variables_header id_list error . LexToken(INSTRUCTIONS,'instructions',5,41)
ERROR: Error  : algo_header variables_header id_list error . LexToken(INSTRUCTIONS,'instructions',5,41)

State  : 31
Stack  : algo_header variables_header id_list error . LexToken(:,':',5,53)
Action : Shift and goto state 50

State  : 50
Stack  : algo_header variables_header id_list error : . LexToken(NEWLINE,'\n',5,54)
Action : Reduce rule [colon -> error :] with [<LexToken @ 0x7fd98cfe6ec0>,':'] and goto state 44
Result : <NoneType @ 0x7fd98dd09e40> (None)

State  : 44
Stack  : algo_header variables_header id_list colon . LexToken(NEWLINE,'\n',5,54)
ERROR: Error  : algo_header variables_header id_list colon . LexToken(NEWLINE,'\n',5,54)

State  : 44
Stack  : algo_header variables_header id_list colon . error
ERROR: Error  : algo_header variables_header id_list colon . error

State  : 25
Stack  : algo_header variables_header id_list . error
Action : Shift and goto state 31

State  : 31
Stack  : algo_header variables_header id_list error . LexToken(NEWLINE,'\n',5,54)
ERROR: Error  : algo_header variables_header id_list error . LexToken(NEWLINE,'\n',5,54)

State  : 31
Stack  : algo_header variables_header id_list error . LexToken(DUMMY,'dummy',6,59)
ERROR: Error  : algo_header variables_header id_list error . LexToken(DUMMY,'dummy',6,59)

State  : 31
Stack  : algo_header variables_header id_list error . LexToken(NEWLINE,'\n',6,64)
ERROR: Error  : algo_header variables_header id_list error . LexToken(NEWLINE,'\n',6,64)

State  : 31
Stack  : algo_header variables_header id_list error . $end
ERROR: Error  : algo_header variables_header id_list error . $end
parse error
LexToken(NEWLINE,'\n',3,39)
Line 3, column 19 
  3 |     a: tab[1...3]  
    |                   ^ 
SyntaxError: Unexpected 'NEWLINE' ('\n')
 -> Expected: ':'
Line 3, column 19 
  3 |     a: tab[1...3]  
    |                   ^ 
SyntaxError: Unexpected 'NEWLINE' ('\n')
 -> Expected: ':'

